way of icons was changed

--- a/module-11/package.json
+++ b/module-11/package.json
@@ -9,7 +9,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://github.com/Serhii777/goit-fe-course.github.io/tree/master",
+  "homepage": "https://github.com/Serhii777/goit-fe-course.github.io",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/luxplanjay/gulp-starter-kit.git"
@@ -45,11 +45,8 @@
     "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-stylelint": "^6.0.0",
-    "gulp-svgstore": "^6.1.1",
     "gulp-uglify": "^3.0.2",
     "require-dir": "^1.2.0",
-    "stylelint": "^9.1.1",
     "usedcss": "^1.0.7"
   }
 }
