--- a/module-11/.gitignore
+++ b/module-11/.gitignore
@@ -9,7 +9,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # build artifacts
-gulp/
+build/
 
 # Runtime data
 pids
@@ -39,9 +39,9 @@ bower_components
 build/Release
 
 # Dependency directories
-gulp/
 node_modules/
 jspm_packages/
+gulp/
 
 # Typescript v1 declaration files
 typings/
