My commit before work1

--- a/project-01/package.json
+++ b/project-01/package.json
@@ -50,6 +50,7 @@
     "usedcss": "^1.0.7"
   },
   "dependencies": {
-    "lodash.template": "^4.5.0"
+    "lodash.template": "^4.5.0",
+    "minimist": "^1.2.5"
   }
 }
