--- a/module-11/package.json
+++ b/module-11/package.json
@@ -50,6 +50,8 @@
     "usedcss": "^1.0.7"
   },
   "dependencies": {
-    "lodash.template": "^4.5.0"
+    "angular-expressions": "^1.1.1",
+    "lodash.template": "^4.5.0",
+    "minimist": "^1.2.5"
   }
 }
