--- a/project-01/package.json
+++ b/project-01/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "acorn": "^7.1.1",
     "angular-expressions": "^1.1.1",
+    "kind-of": "^6.0.3",
     "lodash.template": "^4.5.0",
     "minimist": "^1.2.5"
   }
